deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gfsa-fe
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gfsa-fe
  template:
    metadata:
      labels:
        app: gfsa-fe
    spec:
      containers:
      - name: gfsa-fe
        image: gcr.io/gfsa-438010/gfsa-fe:$IMAGE_TAG
        imagePullPolicy: Always 
        ports:
        - containerPort: 3000
