service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gfsa-fe
  namespace: main
spec:
  type: LoadBalancer
  selector:
    app: gfsa-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
