ingress-uat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gfsa-fe-ingress-uat
  namespace: uat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "my-static-ip"
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /uat
        pathType: Prefix
        backend:
          service:
            name: gfsa-fe
            port:
              number: 80
