ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gfsa-fe-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "my-static-ip"
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: gfsa-fe
            namespace: dev
            port:
              number: 80
      - path: /qa
        pathType: Prefix
        backend:
          service:
            name: gfsa-fe
            namespace: qa
            port:
              number: 80
      - path: /uat
        pathType: Prefix
        backend:
          service:
            name: gfsa-fe
            namespace: uat
            port:
              number: 80
